test: fix tests #42